--- a/dd/src/Component/Bin/bin.css
+++ b/dd/src/Component/Bin/bin.css
@@ -5,3 +5,13 @@
     border-top:none;
     
 }
+.bin p{
+    margin: 6px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 24px;
+}
+#setMasterBin{
+    display: block;
+    margin: 6px auto;
+}
